--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -20,8 +20,8 @@
           <thead>
             <tr>
               <th>
-                <button class='btn btn-primary'> 
-                    Show Image
+                <button class='btn btn-primary' (click)='toggleImage()'> 
+                    {{showImage?'Hide':'Show'}} Image
                 </button>
               </th>
               <th>Product</th>
@@ -37,7 +37,7 @@
                 <img [src]='product.imageUrl'
                   [title]='product.productName'
                   [style.width.px]='imageWidth'
-                  [style.margin.px]='imageMargin'/>
+                  [style.margin.px]='imageMargin' *ngIf='showImage'/>
               </td>
               <td>{{product.productName}}</td>
               <td>{{product.productCode}}</td>
